updated documentation concerning DBH

--- a/documents/Documentation/Documentation.tex
+++ b/documents/Documentation/Documentation.tex
@@ -70,7 +70,7 @@
 		\item \textbf{Client Thread(s)} - Each client is assigned a dedicated thread which only communicates with its assigned client, and executes all commands for this client. This allows non-critical code to be executed in parallel as much as possible, speeding up operations during periods of high-traffic.
 		\item \textbf{Keep Alive Thread} - A thread which periodically accesses the database to prevent the connection from timing out. This is a result of our testing, as the connection would time out over night.
 	\end{enumerate}
-	Upon starting the master thread the password for the MySql database must be supplied. After the setup has completed, it awaits new clients to connect to it through a specific TCP port (all details pertaining to the connection are specified in the "DBH.service" file under the [CONNECTION] section). The master thread continues to run even if no clients are connected. Should the service crash, or the server is restarted, the database password must be supplied upon restarting the service to reestablish a connection. \\ \\ The database handler has two accompanying files, namely, "DBH Setup.pdf" which contains a detailed discussion of how to setup, start, use, and troubleshoot errors pertaining to the Database Handler; and "DBH.service" which is the service file which must be used to start the database handler. 
+	Upon starting the master thread the password for the MySql database must be supplied. After the setup has completed, it awaits new clients to connect to it through a specific TCP port (all details pertaining to the connection are specified in the "DBH.ini" file under the [MISC] section). The master thread continues to run even if no clients are connected. Should the service crash, or the server is restarted, the database password must be supplied upon restarting the service to reestablish a connection. \\ \\ The database handler has two accompanying files, namely, "DBH Setup.pdf" which contains a detailed discussion of how to setup, start, use, and troubleshoot errors pertaining to the Database Handler; and "DBH.ini" which is the configuration file which must be used to start the database handler.
 	\chapter{Testing}
 	
 \end{document}
