added documentation for algorithm

--- a/documents/Documentation/Documentation.tex
+++ b/documents/Documentation/Documentation.tex
@@ -53,6 +53,14 @@
 	\chapter{Website}
 	The website runs as a daemon, and, as such, runs permanently, even if no clients are connected. It uses nginx to forward connections from port 80 to port 5000, which is the port monitored by the website's underlying .Net MVC application.\\ \\ The website has two accompanying files, namely, "CwuAdvising.service" which contains the necessary settings to run the website as a daemon; and an nginx default configuration file which establishes the forwarding between port 80 and port 5000, this file is named "default" and it must be placed in this location: /etc/nginx/sites-available/. \textbf{Note: No other service/application/protocol can use port 5000 or port 80 on the server to prevent conflicts with the website.}
 	\chapter{Algorithm}
+	The algorithm is generating schedule courses by courses by recursion and will keep recursing until all the requirements are gone. all the requirements are going to be put in a LinkedList and all courses are from database.
+	There is a function called ListofCourses that will generate possible schedule for current quarter(just for 1 quarter) based on whether the prerequisites are met or not. It will be called until all the requirements are met.
+	Another function that needs to be implemented was the prereqsMet function to check whether the prerequisites of courses are met or not and whether the courses are offered in the current quarter or not.
+	Furthermore, the algorithm will generate the best possible course by comparing the number of quarters and by putting the courses that are prerequisites into the schedule first, for instance, the courses like CS110 and Math172 that 
+	will be important and are requirements for most courses in order to advance to the next courses(sequential courses like CS110, CS111, CS301), while general education courses or CS112 stand by themselves and mostly do not have prerequisites
+	or can be taken in any quarters. in schedule.cs class, there is a nextSchedule function to increment the schedule if there are no possible courses or if maximum number of credits is reached. NextSchedule will increment quarter from Fall to Winter
+	to Spring to Summer and will increment the year when the current quarter is Fall. We made sure that the algorithm won't throw StackOverflow Error by stop generating schedule for current quarter if
+	there are still requirements left but the number of credits for this quarter haven't reached maximum credits, meaning there are no courses that can be added anymore.
 	\chapter{Databases}
 	\section{MySql Database}
 	The MySql database stores the user credentials, as well as the student graduation plans. Both are stored within the same database, but in separate tables, credentials are stored in the table "user\_credentials", and graduation plans in the table "student\_plans" (these names can be altered in the "DBH.service" file in the section [TABLES]).\\ \\This database is encrypted and cannot be accessed without credentials. All sensitive information is stored within this database.
